# Logic-Gates

./: Button.cpp  Button.h  CMakeLists.txt  Finish.cpp  Finish.h  Object.h  main.cpp
Gate/: CMakeLists.txt  Gate.cpp  Gate.h  Gates.h
Gate/Gates/: And.cpp  And.h  CMakeLists.txt  Nand.cpp  Nand.h  Nor.cpp  Nor.h  Not.cpp  Not.h  Or.cpp  Or.h  Xnor.cpp  Xnor.h  Xor.cpp  Xor.h
Level/: CMakeLists.txt  Level.cpp  Level.h  Levels.h
Level/Levels/: CMakeLists.txt  Lvl1.cpp  Lvl1.h  Lvl10.cpp  Lvl10.h  Lvl2.cpp  Lvl2.h  Lvl3.cpp  Lvl3.h  Lvl4.cpp  Lvl4.h  Lvl5.cpp  Lvl5.h  Lvl6.cpp  Lvl6.h  Lvl7.cpp  Lvl7.h  Lvl8.cpp  Lvl8.h  Lvl9.cpp  Lvl9.h
Platform/: IPlatform.hpp  Platform.hpp
Platform/Unix/: LinuxPlatform.hpp
Platform/Win32/: WindowsPlatform.hpp
